--- a/src/app/open-camera/open-camera.page.html
+++ b/src/app/open-camera/open-camera.page.html
@@ -4,10 +4,18 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true"
+  class="ion-padding flex flex-col items-center justify-center bg-marmol-beige"
+>
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">open-camera</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <div class="container">
+    
+    <app-camera></app-camera>
+
+  </div>
 </ion-content>
