--- a/src/app/components/camera/camera.component.html
+++ b/src/app/components/camera/camera.component.html
@@ -1,7 +1,5 @@
 <ion-content class="ion-padding flex flex-col items-center justify-between bg-marmol-beige min-h-screen">
-  <div class="w-full h-80 bg-gray-900 flex items-center justify-center rounded-lg shadow-lg mt-4">
-    <h2 class="text-white text-2xl font-bold">📷 Cámara Activa</h2>
-  </div>
+  
 
   <div *ngIf="imageUrl" class="flex flex-col items-center mt-6">
     <h3 class="text-2xl font-bold text-granate-renacentista">Foto Capturada:</h3>
@@ -11,9 +9,9 @@
   <div class="w-full flex justify-center py-4">
     <button 
       (click)="takePhoto()" 
-      class="bg-oro-clasico text-white font-bold text-xl px-8 py-4 rounded-full shadow-lg flex items-center space-x-3 transition-all duration-300 hover:bg-oro-clasico-hover hover:scale-105 hover:shadow-xl active:scale-95">
+      class="custom-button text-white font-bold text-xl px-8 py-4 rounded-full shadow-lg flex items-center space-x-3 transition-all duration-300 bg-museo-oro hover:scale-105 hover:shadow-xl active:scale-95">
       <span class="text-2xl">📸</span>
-      <span>Activar Cámara</span>
+      <span>Activar Camara</span>
     </button>
   </div>
 </ion-content>
