--- a/src/app/components/camera/camera.component.html
+++ b/src/app/components/camera/camera.component.html
@@ -9,7 +9,7 @@
   <div class="w-full flex justify-center py-4">
     <button 
       (click)="takePhoto()" 
-      class="custom-button text-white font-bold text-xl px-8 py-4 rounded-full shadow-lg flex items-center space-x-3 transition-all duration-300 bg-museo-oro hover:scale-105 hover:shadow-xl active:scale-95">
+      class="custom-button text-xl bg-museo-oro hover:scale-105 hover:shadow-xl active:scale-95">
       <span class="text-2xl">📸</span>
       <span>Activar Camara</span>
     </button>
