--- a/src/app/open-camera/open-camera.page.html
+++ b/src/app/open-camera/open-camera.page.html
@@ -1,11 +1,11 @@
 
 <ion-content [fullscreen]="true" class="bg-museo-fondo-claro dark:bg-museo-fondo-oscuro flex flex-col items-center justify-center px-6 space-y-8">
   
-  <h1 class="text-3xl font-bold text-museo-negro dark:text-museo-blanco text-center mt-6">
+  <h1 class="text-2xl font-bold text-museo-negro dark:text-museo-blanco text-center mt-6">
     📸 Escaneo de Obra de Arte
   </h1>
 
-  <div class="p-2 bg-museo-beige dark:bg-museo-gris p-6 rounded-lg shadow-lg max-w-md w-full">
+  <div class="mx-3 bg-museo-beige dark:bg-museo-gris p-6 rounded-lg shadow-lg">
     <h2 class="text-lg font-semibold text-museo-negro dark:text-museo-blanco mb-4">Instrucciones:</h2>
     <ol class="list-decimal list-inside space-y-2 text-museo-gris dark:text-gray-300">
       <li>Pulsa el botón para activar la cámara.</li>
@@ -15,7 +15,10 @@
   </div>
 
   <div class="w-full max-w-md flex flex-col items-center">
-    <app-camera></app-camera>
+    <app-camera class="w-full"></app-camera>
+  </div>
+  <div class="w-full max-w-md flex flex-col items-center">
+    <app-art-card></app-art-card>
   </div>
 
 </ion-content>
