--- a/src/global.scss
+++ b/src/global.scss
@@ -35,8 +35,14 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
+.custom-button {
+    @apply w-full text-white font-bold py-4 px-6 rounded-lg shadow-lg flex items-center justify-center space-x-3 text-lg 
+    transition-all duration-300 transform hover:shadow-2xl active:shadow-none active:translate-y-1;
+  }
   
