--- a/src/app/documentation/color-palette/color-palette.page.html
+++ b/src/app/documentation/color-palette/color-palette.page.html
@@ -1,13 +1,26 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>color-palette</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="bg-museo-fondo-claro dark:bg-museo-fondo-oscuro flex flex-col items-center justify-center px-6 space-y-6">
+  
+  <app-back-button></app-back-button>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">color-palette</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <h1 class="text-3xl font-bold text-museo-negro dark:text-museo-blanco text-center mt-6">
+    🎨 Paleta de Colores
+  </h1>
+
+  <div class="grid grid-cols-2 gap-4 w-full max-w-md">
+    
+    <div *ngFor="let color of colors" class="flex flex-col items-center">
+      
+      <div class="w-24 h-24 rounded-lg shadow-md border" [style.backgroundColor]="color.hex"></div>
+      
+      <p class="mt-2 text-museo-negro dark:text-museo-blanco text-sm text-center font-medium">
+        {{ color.name }}
+      </p>
+      <p class="text-gray-500 text-xs">
+        {{ color.hex }}
+      </p>
+      
+    </div>
+
+  </div>
+
 </ion-content>
