--- a/src/app/documentation/documentation-menu/documentation-menu.page.html
+++ b/src/app/documentation/documentation-menu/documentation-menu.page.html
@@ -1,5 +1,7 @@
 <ion-content class="bg-museo-fondo-claro dark:bg-museo-fondo-oscuro flex items-center justify-center h-screen">
   
+  <app-back-button></app-back-button>
+
   <div class="flex flex-col items-center space-y-8 p-5">
     
     
