--- a/src/app/components/camera/camera.component.html
+++ b/src/app/components/camera/camera.component.html
@@ -1,17 +1,21 @@
-<ion-content class="ion-padding flex flex-col items-center justify-between bg-marmol-beige min-h-screen">
+<div class="flex flex-col items-center w-full max-w-md p-6">
   
-
-  <div *ngIf="imageUrl" class="flex flex-col items-center mt-6">
-    <h3 class="text-2xl font-bold text-granate-renacentista">Foto Capturada:</h3>
-    <img [src]="imageUrl" alt="Foto tomada" class="w-72 h-72 rounded-xl shadow-xl mt-4 border-4 border-azul-patrimonio" />
+  
+  <div *ngIf="imageUrl" class="flex flex-col items-center w-full">
+    <!-- <h3 class="text-2xl font-bold text-granate-renacentista dark:text-museo-blanco">📸 Foto Capturada:</h3> -->
+    <img [src]="imageUrl" alt="Foto tomada" 
+      class="w-64 h-64 object-cover rounded-xl shadow-xl mt-4 border-4 border-azul-patrimonio dark:border-museo-oro transition-all duration-300" />
   </div>
 
-  <div class="w-full flex justify-center py-4">
+  
+  <div class="w-full flex justify-center mt-6">
     <button 
       (click)="takePhoto()" 
-      class="custom-button text-xl bg-museo-oro hover:scale-105 hover:shadow-xl active:scale-95">
+      class="custom-button text-lg bg-museo-oro text-museo-negro dark:text-museo-blanco px-6 py-3 rounded-lg 
+             hover:scale-105 hover:shadow-xl active:scale-95 transition-all duration-300 border-2 border-museo-terracota">
       <span class="text-2xl">📸</span>
-      <span>Activar Camara</span>
+      <span>Tomar Foto</span>
     </button>
   </div>
-</ion-content>
+
+</div>
