--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -25,7 +25,7 @@
 
 
     <button 
-      (click)="goToCamera('children')"
+      (click)="goToCamera('child')"
       class="custom-button bg-museo-oro border-b-4 border-museo-terracota hover:border-b-2">
       <span class="text-2xl">🧒</span>
       <span>Niño</span>
@@ -33,7 +33,7 @@
 
  
     <button 
-      (click)="goToCamera('turist')"
+      (click)="goToCamera('tourist')"
       class="custom-button bg-museo-azul border-b-4 border-museo-gris hover:border-b-2">
       <span>🌍</span>
       <span>Turista</span>
@@ -41,7 +41,7 @@
 
 
     <button 
-      (click)="goToCamera('student')"
+      (click)="goToCamera('finearts')"
       class="custom-button bg-museo-vino border-b-4 border-museo-oliva hover:border-b-2">
       <span>🎨</span>
       <span>Estudiante de Bellas Artes</span>
