hidden reproductor and spinner

--- a/src/app/components/art-card/art-card.component.html
+++ b/src/app/components/art-card/art-card.component.html
@@ -20,6 +20,8 @@
   </p>
   </div>
   <ng-template #nodata>
-    <p class="text-gray-500">⏳ Esperando datos...</p>
+    <img src="/assets/icon/eclipse-half.svg" alt="Toca esperar"
+    class="w-24 h-24"
+    >
   </ng-template>
 </div>
