--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,7 +2,6 @@
   class="bg-museo-fondo-claro dark:bg-museo-fondo-oscuro flex flex-col items-center justify-center px-6 space-y-8"
   >
 
-  <!-- Encabezado -->
   <div class="w-full flex flex-col items-center space-y-4 mt-8">
     
     <img 
@@ -13,6 +12,8 @@
     >
 
     <h1 class="text-3xl font-bold text-museo-negro dark:text-museo-blanco text-center">Explora el Arte</h1>
+    <div class="bar-title"></div>
+
     <p class="text-lg text-museo-gris dark:text-gray-400 max-w-md text-center">
       Elige tu perfil y descubre información adaptada para ti.
     </p>
