--- a/src/app/components/camera/camera.component.html
+++ b/src/app/components/camera/camera.component.html
@@ -3,7 +3,7 @@
   
   <div *ngIf="imageUrl" class="flex flex-col items-center w-full">
     <img [src]="imageUrl" alt="Foto tomada" 
-      class="w-64 h-64 object-cover rounded-xl shadow-xl mt-4 border-4 border-azul-patrimonio dark:border-museo-oro transition-all duration-300" />
+      class="w-max h-auto object-cover rounded-xl shadow-xl mt-4 mx-3 border-4 border-azul-patrimonio dark:border-museo-oro transition-all duration-300" />
   </div>
 
   
