--- a/src/app/components/art-card/art-card.component.html
+++ b/src/app/components/art-card/art-card.component.html
@@ -1,4 +1,4 @@
-<div class="p-6 rounded-xl shadow-lg bg-museo-beige dark:bg-museo-gris w-full max-w-md">
+<div class="p-6 rounded-xl shadow-lg bg-museo-beige dark:bg-museo-gris w-full max-w-md h-full">
   <div *ngIf="description; else nodata">
 
   <h2 class="text-2xl font-bold text-museo-negro dark:text-museo-blanco">
@@ -18,10 +18,16 @@
   <p class="text-museo-gris dark:text-gray-300 mt-3">
     {{ description?.description || 'Descripción no disponible' }}
   </p>
+  <a href="" target="_blank" rel="noopener noreferrer">
+    <img src="/assets/icon/wikipedia.svg" alt="Wikipedia" >
+  </a>
   </div>
   <ng-template #nodata>
-    <img src="/assets/icon/eclipse-half.svg" alt="Toca esperar"
-    class="w-24 h-24"
-    >
+    <div class="flex justify-center">
+      <img src="/assets/icon/eclipse-half.svg" alt="Toca esperar"
+      class="w-24 h-24 "
+      >
+
+    </div>
   </ng-template>
 </div>
