--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,7 +11,7 @@
       (click)="goToDocumentation()"
     >
 
-    <h1 class="text-3xl font-bold text-museo-negro dark:text-museo-blanco text-center">Explora el Arte</h1>
+    <h1 class="text-3xl font-bold text-museo-negro dark:text-museo-blanco text-center">ArtLens</h1>
     <div class="bar-title"></div>
 
     <p class="text-lg text-museo-gris dark:text-gray-400 max-w-md text-center">
@@ -22,7 +22,7 @@
 
   <div class="w-full max-w-md p-6 space-y-6">
     
-    <h2 class="text-center text-museo-terracota text-2xl font-bold">Selecciona tu perfil</h2>
+    <h2 class="text-center text-museo-terracota text-2xl font-bold font-body">Selecciona tu perfil</h2>
 
 
     <button 
