--- a/src/app/open-camera/open-camera.page.html
+++ b/src/app/open-camera/open-camera.page.html
@@ -21,10 +21,10 @@
 
   
   <div *ngIf="!photoTaken" class="mx-3 bg-museo-beige dark:bg-museo-gris p-6 rounded-lg shadow-lg flex-grow">
-    <h2 class="text-lg font-semibold text-museo-negro dark:text-museo-blanco mb-4">¿Cómo escanear tu obra de arte?:</h2>
+    <h2 class="text-lg font-semibold text-museo-negro dark:text-museo-blanco mb-4">¿Cómo escanear tu obra de arte?</h2>
     <ol class="list-decimal list-inside space-y-2 text-museo-gris dark:text-gray-300 text-sm">
       <li>Haz clic en el botón para activar la cámara.</li>
-      <li>Enfoca y captura una foto nitida de la obra.</li>
+      <li>Enfoca y captura una foto nítida de la obra.</li>
       <li>Espera mientras analizamos la imagen y te mostraremos los detalles.</li>
     </ol>
   </div>
