--- a/src/app/components/art-card/art-card.component.html
+++ b/src/app/components/art-card/art-card.component.html
@@ -18,20 +18,23 @@
   <p class="text-museo-gris dark:text-gray-300 mt-3">
     {{ description?.description || 'Descripción no disponible' }}
   </p>
-  <span *ngIf="description?.wikilink && description.wikilink.trim() !== ''">
-    <a [href]="description.wikilink" target="_blank" rel="noopener noreferrer"
-    class="link-button">
-      <img src="/assets/icon/wikipedia.svg" alt="Wikipedia" class="w-8 h-8 transition-all">
-    </a>
-  </span>
+  <div class="flex justify-start">
+    <span *ngIf="description?.wikilink && description.wikilink.trim() !== ''">
+      <a [href]="description.wikilink" target="_blank" rel="noopener noreferrer"
+      class="link-button">
+        <img src="/assets/icon/wikipedia.svg" alt="Wikipedia" class="w-12 h-12 transition-all">
+      </a>
+    </span>
+  
+    <span *ngIf="description?.pradolink && description.pradolink.trim() !== ''">
+      <a [href]="description.pradolink" target="_blank" rel="noopener noreferrer"
+      class="link-button"
+      >
+        <img src="/assets/icon/prado.svg" alt="Museo del Prado" class="w-12 h-12 transition-all">
+      </a>
+    </span>
 
-  <span *ngIf="description?.pradolink && description.pradolink.trim() !== ''">
-    <a [href]="description.pradolink" target="_blank" rel="noopener noreferrer"
-    class="link-button"
-    >
-      <img src="/assets/icon/prado.svg" alt="Museo del Prado" class="w-8 h-8 transition-all">
-    </a>
-  </span>
+  </div>
   
 
 
