--- a/src/app/components/art-card/art-card.component.html
+++ b/src/app/components/art-card/art-card.component.html
@@ -2,21 +2,21 @@
   <div *ngIf="description; else nodata">
 
   <h2 class="text-2xl font-bold text-museo-negro dark:text-museo-blanco">
-    {{ description?.title || 'Título desconocido' }}
+    {{ description.title || 'Título desconocido' }}
   </h2>
 
   <p class="text-lg text-museo-gris dark:text-gray-300 mt-1">
     <span class="font-semibold">
-      {{ description?.year || 'Año desconocido' }}
+      {{ description.year || 'Año desconocido' }}
     </span> 
     - 
     <span class="italic">
-      {{ description?.authors || 'Autor desconocido' }}
+      {{ description.authors || 'Autor desconocido' }}
     </span>
   </p>
 
   <p class="text-museo-gris dark:text-gray-300 mt-3">
-    {{ description?.description || 'Descripción no disponible' }}
+    {{ description.description || 'Descripción no disponible' }}
   </p>
   <div class="flex justify-start">
     <span *ngIf="description?.wikilink && description.wikilink.trim() !== ''">
