--- a/src/app/documentation/documentation-menu/documentation-menu.page.html
+++ b/src/app/documentation/documentation-menu/documentation-menu.page.html
@@ -22,9 +22,9 @@
         🔤 Tipografía
       </button>
 
-      <button routerLink="/documentation/ui-components"
+      <button routerLink="/documentation/about-us"
         class="text-2xl font-semibold text-museo-negro dark:text-museo-blanco transition-transform hover:scale-110 hover:text-museo-oro">
-        📦 Componentes UI
+        ℹ️ Sobre Nosotros
       </button>
 
     </div>
